<resources>
    <string name="app_name">Notes</string>
    <string name="back">BACK</string>
    <string name="next">NEXT</string>
    <string name="notes">Notes</string>
    <string name="onboard_image">OnBoard image</string>
    <string name="finish">FINISH</string>
    <string name="about">About</string>
    <string name="rate_us">Rate App</string>
    <string name="feedback">Feedback</string>
    <string name="share">Share</string>
    <string name="content_description_about">About</string>
    <string name="content_description_feedback">Feedback</string>
    <string name="content_description_rate_us">Rate</string>
    <string name="content_description_share">Share</string>
    <string name="more">More</string>
    <string name="delete">Delete</string>
    <string name="selected">item selected</string>
    <string name="items_selected">items selected</string>
    <string name="error_msg">Something went wrong.</string>
    <string name="check_all_cards">Select all</string>
    <string name="select_items">Select items</string>
    <string name="add_new_note">Add New Note</string>
    <string name="newNote">newNote</string>
    <string name="edit_title">Edit Title</string>
    <string name="save">save</string>
    <string name="open">Open Drawer</string>
    <string name="close">Close Drawer</string>
    <string name="welcome_to_the_notes_app">Notes App</string>
    <string name="settings">Settings</string>
    <string name="exit">Exit</string>
    <string name="profile">Profile</string>
    <string name="add_note">Add note here</string>
    <string name="new_note">New Note</string>
    <string name="have_feedback">Have any Feedback / Suggestion(s) ?</string>
    <string name="connect">"Connect with me"</string>
    <string name="instagram">Instagram</string>
    <string name="gmail">Gmail</string>
    <string name="github">Github</string>
    <string name="linkedin">LinkedIn</string>
    <string name="logo">logo</string>
    <string name="by_ayush_saini">by_ayush_saini</string>
    <string name="feedback_title">Feedback</string>
    <string name="type_here">Type here</string>
    <string name="cancel">Cancel</string>
    <string name="send">Send</string>
    <string name="thanks_note">Thank You for your feedback!</string>
    <string name="welcome">Welcome, </string>
    <string name="real_time">Real Time</string>
    <string name="daily_at_night">Daily at 12 AM</string>
    <string name="weekly">Every Sunday at 12 AM</string>
    <string name="select_options">Select suitable option for Backup and Syncing of your Notes :-</string>
    <string name="never">Never</string>
    <string name="backup_now">Backup now</string>
    <string name="sync_now">Sync Now</string>
    <string name="coming_soon">This feature is coming soon!</string>
    <string name="done">Done</string>
    <string name="sign_in">Please Sign In</string>
    <string name="please_sign_in_with_google">Please Sign In with Google</string>
    <string name="signin">Sign In</string>
    <string name="sign_dialog_msg">To Backup and Sync your notes we need you to sign in with Google</string>
    <string name="sign_in_now">SIgn-In Now</string>
    <string name="sign_in_later">Sign-In Later</string>
    <string name="no_internet">No Internet Connection</string>
    <string name="note_s">note(s)</string>
    <string name="delete_notes">Delete Note(s)?</string>
    <string name="no_note_selected">Select note(s) to delete</string>


</resources>
