<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/deleteNote"
        android:contentDescription="@string/content_description_share"
        android:icon="@drawable/trash_small"
        android:title="@string/delete"
        app:showAsAction="ifRoom" />


    <item
        android:id="@+id/shareNote"
        android:contentDescription="@string/content_description_share"
        android:icon="@drawable/share_small"
        android:title="@string/share"
        app:showAsAction="ifRoom" />

    <!-- <item
         android:id="@+id/select_all_notes"
         android:title="@string/check_all_cards"
         android:contentDescription="@string/content_description_share"
         app:showAsAction="never" />
 -->
</menu>