<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.about.AboutActivity">

    <com.google.android.material.appbar.MaterialToolbar
        android:id="@+id/action_bar_about"
        style="@style/Widget.MaterialComponents.Toolbar.Primary"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        app:navigationIcon="@drawable/arrow_back_small"
        app:title="@string/profile" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="80dp"
        android:layout_below="@+id/action_bar_about">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:id="@+id/about_img"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:background="@color/colorBackground"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="0dp"
                    android:layout_height="300dp"
                    android:layout_weight="0.5"
                    android:contentDescription="@string/logo"
                    android:src="@mipmap/notes" />

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="0.005"
                    android:background="@color/white" />

                <ImageView
                    android:layout_width="0dp"
                    android:layout_height="300dp"
                    android:layout_weight="0.5"
                    android:contentDescription="@string/by_ayush_saini"
                    android:src="@mipmap/by_ayush_saini" />

            </LinearLayout>

            <RelativeLayout
                android:id="@+id/connect_with_me"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/about_img"
                android:layout_marginTop="40dp">

                <TextView
                    android:id="@+id/tvText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:text="@string/connect"
                    android:textColor="@color/colorPrimaryDark" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_centerVertical="true"
                    android:layout_marginStart="16dp"
                    android:layout_toStartOf="@id/tvText"
                    android:background="@color/colorPrimary" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_centerVertical="true"
                    android:layout_marginEnd="16dp"
                    android:layout_toEndOf="@id/tvText"
                    android:background="@color/colorPrimary" />
            </RelativeLayout>

            <LinearLayout
                android:id="@+id/social_icons"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/connect_with_me"
                android:layout_marginTop="20dp"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/ic_gmail"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.25"
                    android:contentDescription="@string/gmail"
                    android:onClick="OnSocialMediaClick"
                    android:src="@mipmap/ic_gmail" />

                <ImageView
                    android:id="@+id/ic_github"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.25"
                    android:contentDescription="@string/github"
                    android:onClick="OnSocialMediaClick"
                    android:src="@mipmap/ic_github" />

                <ImageView
                    android:id="@+id/ic_linkedin"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.25"
                    android:contentDescription="@string/linkedin"
                    android:onClick="OnSocialMediaClick"
                    android:src="@mipmap/ic_linkedin" />

                <ImageView
                    android:id="@+id/ic_instagram"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.25"
                    android:contentDescription="@string/instagram"
                    android:onClick="OnSocialMediaClick"
                    android:src="@mipmap/ic_instagram" />
            </LinearLayout>
        </LinearLayout>
    </ScrollView>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/feedback_suggestion_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="30dp"
        android:layout_alignParentBottom="true"
        android:onClick="dialogFeedBack"
        android:text="@string/have_feedback" />

</RelativeLayout>